<resources>
    <string name="app_name">Places</string>
    <!--TEXT HELPERS -->
    <string name="text_helper_place_to_find">Lugar a buscar</string>
    <string name="text_helper_origin_coordinates">Coordenadas de origen</string>
    <string name="text_helper_radio_to_find">Radio de busqueda</string>
    <string name="price_text_view">Precio</string>
    <string name="text_helper_address">Direccion:</string>
    <string name="text_helper_categories">Categories:</string>
    <string name="text_helper_rates">Evaluacion(es)</string>
    <string name="text_helper_price">Precio: </string>
    <string name="text_helper_schedule">Horario</string>
    <string name="place_open_text">Abierto</string>
    <string name="place_close_text">Cerrado</string>
    <string name="text_helper_button_set_coordinates">Establece las coordenadas para que el campo de autocompletado muestre lugares de tu zona</string>

    <!-- Text Subtitle -->
    <string name="text_subtitle_schedule">Horario</string>
    <string name="text_subtitle_map">Mapa</string>

    <string name="text_value_price_very_expensive">Muy Caro</string>
    <string name="text_value_price_expensive">Caro</string>
    <string name="text_value_price_regular">Regular</string>
    <string name="text_value_price_cheap">Barato</string>
    <string name="text_value_price_unknown">Desconocido</string>

    <string name="text_value_mode_list">Modo Lista</string>
    <string name="text_value_mode_map">Modo Mapa</string>

    <!--INFO-->
    <string name="text_info_coordinates_set">Coordenadas establecidas</string>
    <string name="text_info_not_found_places">No se encontraron lugares intente con otra ubicacion o cambie los filtros de busqueda</string>
    <string name="text_info_not_found_reviews">No se encontraron reseñas</string>

    <!--LABELS TEXTS-INPUT-->
    <string name="place_label">Lugar</string>
    <string name="latitude_label">Latitud</string>
    <string name="longitude_label">Longitud</string>
    <string name="radius_label">Radio</string>
    <string name="categories_label">Categorias</string>
    <string name="category_label">Categoria</string>
    <string name="sort_label">Ordenar por</string>
    <string name="cheap_text_chip">Barato</string>
    <string name="regular_text_chip">Regular</string>
    <string name="expensive_text_chip">Caro</string>
    <string name="very_expensive_text_chip">Muy Caro</string>
    <string name="address_not_available">Direccion no disponible</string>


    <!--TEXT BUTTONS-->
    <string name="text_contained_button_get_coordinates">My ubicacion</string>
    <string name="apply_filter_text_label">Aplicar filtro</string>
    <string name="text_contained_button_set_coordinates">Establecer coordenadas</string>
    <string name="text_contained_button_see_reviews">Ver reseñas</string>
    <string name="text_contained_button_see_map">Ver mapa</string>
    <string name="text_outlined_button_open">Abierto</string>
    <string name="text_outlined_button_close">Cerrado</string>
    <string name="text_outlined_button_both">Ambos</string>

    <!--TEXT ERRORS -->
    <string name="natural_invalid_error_message">Solo numeros natural</string>
    <string name="decimal_invalid_error_message">Decimal invalido</string>
    <string name="text_empty_error_message">Campo vacio</string>
    <string name="radius_out_of_range_error_message">Radio fuera de rango [0, 40000]</string>


    <string name="fragment_search_label">fragment_search</string>
    <string name="fragment_list_label">fragment_list</string>

    <!--KEYS-->
    <string name="places_service_base_url" translatable="false">https://api.yelp.com/</string>
    <string name="map_api_key" translatable="false">AIzaSyCfaCxqbQogUqs1p3eEYdt9SZG5JbeLyWs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_validate_form_search">Error al validar el formulario</string>
    <string name="error_validate_form_location">Error al validar formulario</string>
    <string name="error_save_location">Error al guardar localizacion</string>
    <string name="error_load_location">Error al cargar localizacion</string>
    <string name="error_connection_with_server">Error al conectar con el servidor</string>
    <string name="error_server">Error en el servidor</string>
    <string name="error_network_connection">No hay conexion de internet</string>
    <string name="error_unknown">Error desconocido</string>
    <string name="error_location_invalid">Localizacion invalida</string>
    <string name="places_only_open_text_check_box">¿Abierto ahora?</string>
    <string name="set_location_text_label">Establecer Localizacion</string>
    <string name="automatic_location">Localizacion automatica</string>
    <string name="kind_visibility">Tipo de vista</string>
    <string name="view_list">Lista</string>
    <string name="view_map">Mapa</string>
    <string name="categories_text_view">Categorias:</string>
    <string name="apply_categories_text_label">Aplicar</string>
    <string name="error_get_sort_criteria">Error al obtener los creterios de ordenamiento</string>
    <string name="error_get_prices">Error al obtener precios</string>
    <string name="latitude_out_of_range_error_message">Latitud fuera de rango</string>
    <string name="longitude_out_of_range_error_message">Longitud fuera de rango</string>
    <string name="info_title_dialog">Informacion</string>
    <string name="permission_rationale_title">Justificacion del Permiso</string>
    <string name="error_title_dialog">Error</string>
    <string name="warnings_title_dialog">Advertencias</string>
    <string name="location_saved_message_dialog">Localizacion establecida. Si quieres cambiar tu ubicacion hazlo en las configuraciones de la pantalla de busqueda</string>
    <string name="find_searches_dialog_positive_button">Siguiente</string>
    <string name="accept_dialog_positive_button">Aceptar</string>
    <string name="icon">icono del dialogo</string>
    <string name="location_permission_rational_message">Esta funcionalidad obtiene solo tu ubicacion aproximada para orientar tu busqueda a lugares cercanos</string>
    <string name="error_location_is_disabled">La ubicacion esta desactivada. Para poder obtener tu ubicación actual, es necesario activar el GPS</string>
    <string name="error_client_input_data">Algun dato ingresado es invalido, por favor verifica los datos</string>
    <string name="error_to_get_suggested_places">Error al obtener sugerencias de lugares</string>
    <string name="error_to_get_categories">Error al obtener sugerencias de categorias</string>
    <string name="get_current_location_text_label">Localizacion actual</string>
    <string name="suggested_place_label">Sugerencias de busqueda</string>
    <string name="there_are_no_suggestions_label">No se encontraron sugerencias</string>
    <string name="there_are_no_categories_label">No se encontraron categorias</string>
    <string name="there_are_no_places_label">No se encontraron lugares</string>

    <string name="advanced_search_option">Busqueda Avanzada</string>
    <string name="change_coordinates_option">Cambiar coordenas</string>
    <string name="categories_cannot_be_repeated">No se pueden repetir categorias</string>
    <string name="description_change_view_button">Boton para cambiar el modo de vista</string>
    <string name="number_results_text">No. Resultados:</string>
    <string name="empty_results">No hay resultados</string>
    <string name="no_more_results">No hay mas resultados</string>
    <string name="place_content_description_image_view">Imagen del lugar</string>
    <string name="rating">Evaluacion</string>
    <string name="ratings">Evaluaciones</string>
    <string name="phone_number">Telefono:</string>
    <string name="address">Direccion:</string>
    <string name="categories">Categorias:</string>
    <string name="price">Precio:</string>
    <string name="there_is_no_information">Sin datos</string>
    <string name="page">Pagina</string>
    <string name="of">de</string>
    <string name="content_description_place_image_map">Imagen del lugar en el mapa</string>
    <string name="content_description_marker_image_map">Marcardor de seleccion</string>
    <string name="point_location_text_label">Señalar lugar</string>
    <string name="point_from_map_text_label">Señalar desde el mapa</string>
</resources>