<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout style="@style/default_size_expanded_style"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/place_text_input_layout"
        style="@style/text_input_layout_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/place_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_store_24">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/default_size_height_style"
            android:textAppearance="@style/regular_text_style" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/radius_text_input_layout"
        style="@style/text_input_layout_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/radius_label"
        app:errorTextAppearance="@style/text_input_text_error_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/place_text_input_layout"
        app:startIconDrawable="@drawable/ic_baseline_radar_24">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/default_size_height_style"
            android:inputType="number"
            android:textAppearance="@style/regular_text_style" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_style"
        android:id="@+id/categories_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:startIconDrawable="@drawable/ic_baseline_category_24"
        app:endIconDrawable="@drawable/ic_baseline_search_24"
        android:hint="@string/categories_label"
        android:enabled="false"
        app:endIconMode="custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radius_text_input_layout"
        app:endIconCheckable="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/default_size_height_style"
            android:textAppearance="@style/regular_text_style"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/exposed_drop_down_menu"
        android:id="@+id/sort_by_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:startIconDrawable="@drawable/ic_baseline_sort_24"
        android:hint="@string/sort_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories_text_input_layout">
        <AutoCompleteTextView
            style="@style/default_size_height_style"
            android:textAppearance="@style/regular_text_style"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.divider.MaterialDivider
        style="@style/default_middle_divider"
        android:id="@+id/divider"
        app:layout_constraintTop_toBottomOf="@id/sort_by_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/price_text_view"
        style="@style/default_size_height_style"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAppearance="@style/text_subtitle_style"
        android:text="@string/price_text_view"
        android:textColor="@color/primary_color"
        app:layout_constraintTop_toTopOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <HorizontalScrollView
        android:id="@+id/scroll_view"
        style="@style/default_size_height_style"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/price_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_prices"
            style="@style/default_size_height_style">

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <com.google.android.material.divider.MaterialDivider
        style="@style/default_middle_divider"
        android:id="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@id/scroll_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/state_place_button_toggle_group"
        style="@style/default_size_height_style"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider2">

        <Button
            android:id="@+id/button_open"
            style="@style/outlined_button_container_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/text_outlined_button_open" />

        <Button
            android:id="@+id/button_close"
            style="@style/outlined_button_container_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/text_outlined_button_close" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButton
        style="@style/contained_button_container_style"
        android:id="@+id/apply_filter_button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/apply_filter_text_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>