<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.LocationFragment">

    <LinearLayout
        style="@style/default_size_height_style"
        android:layout_height="56dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/latitude_text_input_layout"
            style="@style/text_input_layout_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.43"
            android:hint="@string/latitude_label"
            app:errorTextAppearance="@style/text_input_text_error_style"
            app:startIconDrawable="@drawable/ic_baseline_place_24">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/default_size_height_style"
                android:inputType="numberSigned|numberDecimal"
                android:textAppearance="@style/regular_text_style" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/longitude_text_input_layout"
            style="@style/text_input_layout_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.43"
            android:hint="@string/longitude_label"
            app:errorTextAppearance="@style/text_input_text_error_style"
            app:startIconDrawable="@drawable/ic_baseline_place_24">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/default_size_height_style"
                android:inputType="numberSigned|numberDecimal"
                android:textAppearance="@style/regular_text_style" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/icon_button"
            android:id="@+id/location_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.14"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/automatic_location"
            app:icon="@drawable/ic_baseline_my_location_24"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_coordinates_button"
        style="@style/contained_button_container_style"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/set_location_text_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>